[gd_scene load_steps=6 format=2]

[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/GeneralDialog/GeneralDialog.gd" type="Script" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/InputKeyDialog/Assets/InputKeyDialog_SideBorder.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/InputKeyDialog/Assets/InputKeyDialog_BodyBackground.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="GeneralDialog" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyBackground" type="TextureRect" parent="."]
margin_right = 237.0
margin_bottom = 92.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 3.0
margin_bottom = 92.0
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 234.0
margin_right = 237.0
margin_bottom = 92.0
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 237.0
margin_bottom = 3.0
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 89.0
margin_right = 237.0
margin_bottom = 92.0
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ContentContainer" type="MarginContainer" parent="."]
margin_right = 237.0
margin_bottom = 92.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 222.0
margin_bottom = 77.0

[node name="TitleLabel" type="Label" parent="ContentContainer/VBoxContainer"]
margin_right = 207.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Sample Title"
align = 1

[node name="ContentLabel" type="Label" parent="ContentContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 207.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Sample Content here ..."
align = 1

[node name="MarginContainer" type="MarginContainer" parent="ContentContainer/VBoxContainer"]
margin_left = 103.0
margin_top = 42.0
margin_right = 103.0
margin_bottom = 62.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/margin_top = 20

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="ContentContainer/VBoxContainer/MarginContainer"]
margin_top = 20.0
margin_bottom = 20.0
size_flags_horizontal = 6
size_flags_vertical = 6
